--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>Buket Boran | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap" />
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Buket Boran</div>
+        <a href="https://github.com/buketboran" target="_blank">
+            <div class="logo">Buket Boran</div>
+        </a>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -39,7 +42,7 @@
     </nav>
     <section id="profile">
       <div class="section__text">
-        <p class="section__text__p1">Hello, I'm</p>
+        <p class="section__text__p1">Hello, I am</p>
         <h1 class="title">Buket Boran</h1>
         <p class="section__text__p2">Computer Programmer</p>
         <div class="btn-container">
@@ -47,22 +50,8 @@
             class="btn btn-color-2"
             onclick="window.open('./assets/CV.pdf')"
           >
-            Download CV
+            Check my CV
           </button>
-        </div>
-        <div id="socials-container">
-          <img
-            src="./assets/linkedin.png"
-            alt="My LinkedIn profile"
-            class="icon"
-            onclick="location.href='https://www.linkedin.com/in/buket-boran-371997301/'"
-          />
-          <img
-            src="./assets/github.png"
-            alt="My Github profile"
-            class="icon"
-            onclick="location.href='https://github.com/memominis'"
-          />
         </div>
       </div>
     </section>
@@ -72,27 +61,21 @@
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
-              <img
-                src="./assets/experience.png"
-                alt="Experience icon"
-                class="icon"
-              />
               <h3>Experience</h3>
               <p>2 years <br />Backend/Frontend Development</p>
             </div>
             <div class="details-container">
-              <img
-                src="./assets/education.png"
-                alt="Education icon"
-                class="icon"
-              />
               <h3>Education</h3>
               <p>Computer Programming, Vocational Degree</p>
               <p>İzmir University of Economics</p>
             </div>
+            <div class="details-container">
+              <h3>Internship</h3>
+              <p>Baknet Bilgi İşlem ve Taşımacılık Ticaret AŞ</p>
+              <p>August 2023</p>
           </div>
           <div class="text-container">
-            <p>
+            <p class="aboutt">
               My name is Buket Boran and I am an aspiring web/software developer currently residing on İzmir, Turkey. I began my journey teaching myself how to code a few years back, starting with simple YouTube tutorials. At the time I had no clue what I was getting into, I just thought the world of computers seemed really cool and always was curious to learn.
               Since then I have learned quite a bit on OOP and web development and took some courses that Cisco Networking Academy provides.
               While my learning journey has been a bit sporadic since I had other things to attend to in life, I am now in a position where I am fully commiting to this path.
@@ -352,14 +335,7 @@
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-1.png"
-                alt="Project 1"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">ANIMALS ADOPTION WEBSITE</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -370,14 +346,7 @@
             </div>
           </div>
           <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-2.png"
-                alt="Project 2"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">JOHN FRUSCIANTE FAN WEBSITE</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -388,14 +357,8 @@
             </div>
           </div>
           <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-3.png"
-                alt="Project 3"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">SELLS AUTOMATION OF A SOCKS SELLER BRAND
+            </h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -406,14 +369,7 @@
             </div>
           </div>
           <div class="details-container color-container">
-            <div class="article-container">
-              <img
-                src="./assets/project-4.png"
-                alt="Project 4"
-                class="project-img"
-              />
-            </div>
-            <h2 class="experience-sub-title project-title">Project Four</h2>
+            <h2 class="experience-sub-title project-title">OASIS HOSPITAL</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -424,14 +380,7 @@
         </div>
       </div>
       <div class="details-container color-container">
-        <div class="article-container">
-          <img
-            src="./assets/project-4.png"
-            alt="Project 4"
-            class="project-img"
-          />
-        </div>
-        <h2 class="experience-sub-title project-title">Project Five</h2>
+        <h2 class="experience-sub-title project-title">INCOME-EXPENSE CALCULATOR AUTOMATION</h2>
         <div class="btn-container">
           <button
             class="btn btn-color-2 project-btn"
@@ -442,14 +391,7 @@
     </div>
   </div>
   <div class="details-container color-container">
-    <div class="article-container">
-      <img
-        src="./assets/project-4.png"
-        alt="Project 4"
-        class="project-img"
-      />
-    </div>
-    <h2 class="experience-sub-title project-title">Project Six</h2>
+    <h2 class="experience-sub-title project-title">PANEL</h2>
     <div class="btn-container">
       <button
         class="btn btn-color-2 project-btn"
@@ -460,14 +402,7 @@
 </div>
 </div>
 <div class="details-container color-container">
-  <div class="article-container">
-    <img
-      src="./assets/project-4.png"
-      alt="Project 4"
-      class="project-img"
-    />
-  </div>
-  <h2 class="experience-sub-title project-title">Project Seven</h2>
+  <h2 class="experience-sub-title project-title">HEALTH DATA COLLECTOR AND ANALYZER</h2>
   <div class="btn-container">
     <button
       class="btn btn-color-2 project-btn"
@@ -478,14 +413,7 @@
 </div>
 </div>
 <div class="details-container color-container">
-  <div class="article-container">
-    <img
-      src="./assets/project-4.png"
-      alt="Project 4"
-      class="project-img"
-    />
-  </div>
-  <h2 class="experience-sub-title project-title">Project Eight</h2>
+  <h2 class="experience-sub-title project-title">A DEMO WEBSITE IN TAILWINDCSS</h2>
   <div class="btn-container">
     <button
       class="btn btn-color-2 project-btn"
@@ -496,14 +424,7 @@
 </div>
 </div>
 <div class="details-container color-container">
-  <div class="article-container">
-    <img
-      src="./assets/project-4.png"
-      alt="Project 4"
-      class="project-img"
-    />
-  </div>
-  <h2 class="experience-sub-title project-title">Project Nine</h2>
+  <h2 class="experience-sub-title project-title">PORTFOLIO WEBSITE</h2>
   <div class="btn-container">
     <button
       class="btn btn-color-2 project-btn"
@@ -513,12 +434,23 @@
     </button>
 </div>
 </div>
+<div class="details-container color-container">
+  <h2 class="experience-sub-title project-title">ADOBE PHOTOSHOP/ILLUSTRATOR PROJECTS</h2>
+  <div class="btn-container">
+    <button
+      class="btn btn-color-2 project-btn"
+      onclick="location.href=''
+      ">
+      View Projects
+    </button>
+</div>
+</div>
+      
 
 
     </section>
     <section id="contact">
       <h1 class="title">Contact Me</h1>
-      <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
             src="./assets/email.png"
@@ -535,6 +467,13 @@
           />
           <p><a href="https://www.linkedin.com/in/buket-boran-371997301/">LinkedIn</a></p>
         </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/github.png"
+            alt="Github icon"
+            class="icon contact-icon"
+          />
+          <p><a href="https://github.com/buketboran">GitHub</a></p>
       </div>
     </section>
     <footer>
