--- a/index.html
+++ b/index.html
@@ -289,11 +289,11 @@
         </h2>
         <div class="btn-container">
           <button
-            class="btn btn-color-2 certificate-btn"
-            onclick="location.href='assets/BuketBoran-IEU Ağ Temelleri-certificate.pdf'"
-          >
-            View Certificate
-          </button>
+  class="btn btn-color-2 certificate-btn"
+  onclick="window.open('assets/BuketBoran-IEU Ağ Temelleri-certificate.pdf', '_blank')"
+>
+  View Certificate
+</button>
         </div>
       </div>
       <div class="details-container color-container">
@@ -338,11 +338,11 @@
             <h2 class="experience-sub-title project-title">ANIMALS ADOPTION WEBSITE</h2>
             <div class="btn-container">
               <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
-              >
-                Github
-              </button>
+  class="btn btn-color-2 project-btn"
+  onclick="window.open('https://github.com/buketboran/cat-adoption-website', '_blank')"
+>
+  Github
+</button>
             </div>
           </div>
           <div class="details-container color-container">
@@ -350,7 +350,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://github.com/buketboran/john-frusciante-fanpage', '_blank')"
               >
                 Github
               </button>
@@ -362,7 +362,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://github.com/buketboran', '_blank')"
               >
                 Github
               </button>
@@ -373,7 +373,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="window.open('https://github.com/buketboran/oasis-hospital', '_blank')"
               >
                 Github
               </button>
@@ -384,7 +384,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2 project-btn"
-            onclick="location.href='https://github.com/'"
+            onclick="window.open('https://github.com/buketboran', '_blank')"
           >
             Github
           </button>
@@ -395,7 +395,7 @@
     <div class="btn-container">
       <button
         class="btn btn-color-2 project-btn"
-        onclick="location.href='https://github.com/'"
+        onclick="window.open('https://github.com/buketboran/control-panel', '_blank')"
       >
         Github
       </button>
@@ -406,19 +406,29 @@
   <div class="btn-container">
     <button
       class="btn btn-color-2 project-btn"
-      onclick="location.href='https://github.com/'"
+      onclick="window.open('https://github.com/buketboran/health-data-manager', '_blank')"
     >
       Github
     </button>
 </div>
 </div>
 <div class="details-container color-container">
-  <h2 class="experience-sub-title project-title">A DEMO WEBSITE IN TAILWINDCSS</h2>
+  <h2 class="experience-sub-title project-title">A DEMO SHOPPING WEBSITE IN TAILWINDCSS</h2>
   <div class="btn-container">
     <button
       class="btn btn-color-2 project-btn"
-      onclick="location.href='https://github.com/'"
+      onclick="window.open('https://github.com/buketboran/shopping-demo-website', '_blank')"
     >
+      Github
+    </button>
+</div>
+</div>
+<div class="details-container color-container">
+  <h2 class="experience-sub-title project-title">BOOK TRACKER USING REACT</h2>
+  <div class="btn-container">
+    <button
+      class="btn btn-color-2 project-btn"
+      onclick="window.open('https://github.com/buketboran/book-tracker-in-react', '_blank')">
       Github
     </button>
 </div>
@@ -428,7 +438,7 @@
   <div class="btn-container">
     <button
       class="btn btn-color-2 project-btn"
-      onclick="location.href='https://github.com/'"
+      onclick="window.open('https://github.com/buketboran/buketboran.github.io', '_blank')"
     >
       Github
     </button>
@@ -439,26 +449,20 @@
   <div class="btn-container">
     <button
       class="btn btn-color-2 project-btn"
-      onclick="location.href=''
-      ">
-      View Projects
+      onclick="window.open('https://github.com/buketboran/adobe-photoshop-illustrator-projects', '_blank')"
+      >
+      Github
     </button>
 </div>
 </div>
+
       
 
 
     </section>
     <section id="contact">
       <h1 class="title">Contact Me</h1>
-        <div class="contact-info-container">
-          <img
-            src="./assets/email.png"
-            alt="Email icon"
-            class="icon contact-icon email-icon"
-          />
-          <p><a href="mailto:buket.boran@hotmail.com">buket.boran@hotmail.com</a></p>
-        </div>
+      <div class="contact-list">
         <div class="contact-info-container">
           <img
             src="./assets/linkedin.png"
@@ -469,11 +473,20 @@
         </div>
         <div class="contact-info-container">
           <img
+            src="./assets/email.png"
+            alt="Email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p><a href="mailto:buket.boran@hotmail.com">buket.boran@hotmail.com</a></p>
+        </div>
+        <div class="contact-info-container">
+          <img
             src="./assets/github.png"
             alt="Github icon"
             class="icon contact-icon"
           />
           <p><a href="https://github.com/buketboran">GitHub</a></p>
+      </div>
       </div>
     </section>
     <footer>
